# monke-project

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  projekt.MD  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
data/: adapter_retrieval_comparison.json  evaluation_results.json  evaluation_results_my_short.json
data/adapters/lin2_train/: adapter_lin2_retrieval_comparison.txt
src/: Validate.py  cli_utils.py  comparison.py  create_dataset.py  cross_encoder.py  download.py  embd_test.py  embedding.py  evaluation.py  evalutation.py  filtered_data.json  fine_tune_embedding.py  frontend.py  law_assistant.py  legal_assistant.py  main.py  prompts.py  settings.py  template_parser.py  utils.py  vector_db.py  visualize_results.py
test/: test_dataset_1234_0.05
